# AeroTerminal

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
canvas-builder/: index.html  package-lock.json  package.json  vite.config.js
canvas-builder/src/: main.jsx
src/app/: WindowFrame.cpp  WindowFrame.h  main.cpp
src/core/: AppContext.h  EventToken.h  MarketDataService.cpp  MarketDataService.h  webview.h
src/core/indicators/: IndicatorManager.cpp  IndicatorManager.h
src/ui/widgets/: PanelAlgoTrading.cpp  PanelAlgoTrading.h  PanelCalendar.cpp  PanelCalendar.h  PanelChart.cpp  PanelChart.h  PanelExecution.cpp  PanelExecution.h  PanelJournal.cpp  PanelJournal.h  PanelOrderBook.cpp  PanelOrderBook.h  PanelSaathi.cpp  PanelSaathi.h  PanelScreener.cpp  PanelScreener.h  PanelTrades.cpp  PanelTrades.h  PanelWhiteboard.cpp  PanelWhiteboard.h
storage/: canvas.json  daily_notes.json  learning_state.json  tldraw_index.html
